--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Receipts - AI-Powered Expense Tracker</title>
     <meta name="description" content="Ready to put off your receipt burden? Smart Receipts keeps all your expenses organized in one place, making tax filing and monthly budgeting effortless." />
